[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/volume_bg.png" type="Texture" id=1]
[ext_resource path="res://src/player/volume_set.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/x.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 6.35676, -14.0834 )
scale = Vector2( 5.56893, 2.15879 )
texture = ExtResource( 1 )

[node name="HSlider" type="HSlider" parent="."]
pause_mode = 2
margin_left = -66.5926
margin_top = -46.8613
margin_right = 117.407
margin_bottom = -12.8613
rect_pivot_offset = Vector2( 355.656, 17 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
pause_mode = 2
margin_left = -131.403
margin_top = -36.1101
margin_right = -73.4034
margin_bottom = -16.1101
rect_pivot_offset = Vector2( -360.151, -116.175 )
text = "BGM"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 145.0
margin_top = -83.0
margin_right = 186.0
margin_bottom = -44.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
pause_mode = 2
margin_left = -130.654
margin_top = -7.64227
margin_right = -72.6542
margin_bottom = 12.3577
rect_pivot_offset = Vector2( -360.151, -116.175 )
text = "effect"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="."]
pause_mode = 2
margin_left = -68.0909
margin_top = -16.8952
margin_right = 115.909
margin_bottom = 17.1048
rect_pivot_offset = Vector2( 355.656, 17 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_HSlider2_value_changed"]
